--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,5 @@ spring.h2.console.settings.trace=false
 spring.h2.console.settings.web-allow-others=true
 #spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.hibernate.ddl-auto=update
+file.input=coffee-list.csv
+spring.batch.job.enabled=false
